--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -26,7 +26,6 @@
 
             <include layout="@layout/layout_book_detail_header" />
 
-            <!--<include layout="@layout/toolbar"/>-->
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -37,34 +36,20 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
+    <!--详情简介-->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="56dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <!--<androidx.core.widget.NestedScrollView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:scrollbars="vertical">-->
-
-            <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:orientation="vertical">-->
-                <!--<TextView-->
-                    <!--android:id="@+id/book_detail_tv_desc"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textSize="@dimen/text_normal" />-->
-            <!--</LinearLayout>-->
-
-        <!--</androidx.core.widget.NestedScrollView>-->
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/book_detail_rv_catalog"
+            android:id="@+id/book_detail_rv_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </FrameLayout>
 
+    <!--底部button-->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
