update the read setting

--- a/app/src/main/res/layout/item_catalog.xml
+++ b/app/src/main/res/layout/item_catalog.xml
@@ -20,5 +20,5 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/divider_narrow" />
+        android:background="@color/divider_wide" />
 </LinearLayout>
