--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/read_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,19 +25,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="?attr/actionBarSize"
+                app:titleTextColor="@color/read_menu_text"
                 android:theme="@style/Theme.ToolBar.Menu">
-                <RelativeLayout
-                android:layout_width="120dp"
-                android:layout_height="50dp"
-                android:layout_gravity="right"
-                android:background="@color/read_menu_bg">
-                <TextView
-                android:id="@+id/read_tv_brief"
-                android:layout_alignParentRight="true"
-                android:text="@string/read_brief"
-                style="@style/AppTheme.TextAppearance.Read.TopMenu"/>
-
-                </RelativeLayout>
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
