--- a/app/src/main/res/layout/dialog_read_setting.xml
+++ b/app/src/main/res/layout/dialog_read_setting.xml
@@ -69,44 +69,50 @@
 
         </LinearLayout>
 
-        <CheckBox
-            android:id="@+id/read_setting_tv_font_complex"
-            style="@style/AppTheme.TextAppearance.Read.BottomMenu"
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="@dimen/read_setting_btn_height"
-            android:layout_margin="@dimen/margin_small"
-            android:layout_weight="1"
-            android:background="@drawable/selector_btn_read_setting"
-            android:button="@null"
-            android:gravity="center"
-            android:text="繁"
-            android:textColor="@color/read_menu_text" />
+            android:layout_height="wrap_content"
+            android:layout_weight="8">
 
-        <CheckBox
-            android:id="@+id/read_setting_tv_font_body"
-            style="@style/AppTheme.TextAppearance.Read.BottomMenu"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/read_setting_btn_height"
-            android:layout_margin="@dimen/margin_small"
-            android:layout_weight="1"
-            android:background="@drawable/selector_btn_read_setting"
-            android:button="@null"
-            android:gravity="center"
-            android:text="粗"
-            android:textColor="@color/read_menu_text" />
+            <CheckBox
+                android:id="@+id/read_setting_tv_font_complex"
+                style="@style/AppTheme.TextAppearance.Read.BottomMenu"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/read_setting_btn_height"
+                android:layout_margin="@dimen/margin_small"
+                android:layout_weight="1"
+                android:background="@drawable/selector_btn_read_setting"
+                android:button="@null"
+                android:gravity="center"
+                android:text="繁"
+                android:textColor="@color/read_menu_text" />
 
-        <CheckBox
-            android:id="@+id/read_setting_tv_font_custom"
-            style="@style/AppTheme.TextAppearance.Read.BottomMenu"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/read_setting_btn_height"
-            android:layout_margin="@dimen/margin_small"
-            android:layout_weight="3"
-            android:background="@drawable/selector_btn_read_setting"
-            android:button="@null"
-            android:gravity="center"
-            android:text="自定字体"
-            android:textColor="@color/read_menu_text" />
+            <CheckBox
+                android:id="@+id/read_setting_tv_font_body"
+                style="@style/AppTheme.TextAppearance.Read.BottomMenu"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/read_setting_btn_height"
+                android:layout_margin="@dimen/margin_small"
+                android:layout_weight="1"
+                android:background="@drawable/selector_btn_read_setting"
+                android:button="@null"
+                android:gravity="center"
+                android:text="粗"
+                android:textColor="@color/read_menu_text" />
+
+            <CheckBox
+                android:id="@+id/read_setting_tv_font_custom"
+                style="@style/AppTheme.TextAppearance.Read.BottomMenu"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/read_setting_btn_height"
+                android:layout_margin="@dimen/margin_small"
+                android:layout_weight="3"
+                android:background="@drawable/selector_btn_read_setting"
+                android:button="@null"
+                android:gravity="center"
+                android:text="自定字体"
+                android:textColor="@color/read_menu_text" />
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -122,7 +128,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/margin_small"
-            android:layout_weight="4"
+            android:layout_weight="5"
             android:orientation="horizontal">
 
             <TextView
@@ -172,7 +178,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/margin_small"
-            android:layout_weight="4"
+            android:layout_weight="5"
             android:orientation="horizontal">
 
             <TextView
