修复换源若干问题

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,8 +41,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/tab_height"
                 app:tabIndicatorColor="@color/md_orange_800"
-                app:tabSelectedTextColor="@color/textPrimary"
-                app:tabTextColor="@color/textAssist" />
+                app:tabIndicatorFullWidth="false"
+                app:tabSelectedTextColor="@color/md_white_1000"
+                app:tabTextColor="@color/textTranslucent" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
