--- a/app/src/main/res/layout/layout_book_detail_bottom.xml
+++ b/app/src/main/res/layout/layout_book_detail_bottom.xml
@@ -32,7 +32,7 @@
         <TextView
             android:id="@+id/book_detail_tv_add"
             style="@style/BottomNavigation.ItemView.Title"
-            android:text="@string/book_detail_add_bookcase"
+            android:text="加入书架"
             android:textColor="@color/textPrimary"/>
 
     </FrameLayout>
@@ -49,7 +49,7 @@
         <TextView
             android:id="@+id/book_detail_tv_open"
             style="@style/BottomNavigation.ItemView.Title"
-            android:text="@string/book_detail_open_book"
+            android:text="打开阅读"
             android:textColor="@color/textPrimaryInverted"/>
 
     </FrameLayout>
