--- a/app/src/main/res/layout/layout_book_detail_header.xml
+++ b/app/src/main/res/layout/layout_book_detail_header.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?colorPrimary"
-    app:layout_collapseMode="parallax"
-    app:layout_collapseParallaxMultiplier="0.7"
-    android:paddingBottom="16.0dp"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="64.0dp"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="64.0dp">
+    android:paddingBottom="16.0dp"
+    app:layout_collapseMode="parallax"
+    app:layout_collapseParallaxMultiplier="0.7">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cover"
@@ -25,7 +24,7 @@
             android:layout_width="82dp"
             android:layout_height="110dp"
             android:scaleType="centerCrop"
-            tools:src="@mipmap/ic_default_book_cover"/>
+            tools:src="@mipmap/ic_default_book_cover" />
 
     </androidx.cardview.widget.CardView>
 
@@ -39,29 +38,31 @@
         android:layout_toRightOf="@+id/cover"
         android:ellipsize="end"
         android:maxLines="1"
-        tools:text=" 茶叶蛋"
-        android:textColor="@color/md_orange_800"/>
+        android:textColor="@color/md_orange_800"
+        tools:text=" 茶叶蛋" />
 
     <TextView
         android:id="@+id/book_detail_tv_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/book_detail_tv_author"
         android:layout_alignLeft="@id/book_detail_tv_author"
         android:layout_marginTop="6dp"
-        android:layout_below="@+id/book_detail_tv_author"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textColor="@color/textSecondaryInverted"
-        tools:text="仙侠"/>
+        tools:text="仙侠" />
 
 
     <TextView
         android:id="@+id/book_detail_tv_word_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/book_detail_tv_author"
         android:layout_below="@id/book_detail_tv_type"
-        android:textColor="@color/textSecondaryInverted"
+        android:layout_alignLeft="@id/book_detail_tv_author"
         android:layout_marginTop="6dp"
-        tools:text="2.5万字"/>
+        android:textColor="@color/textSecondaryInverted"
+        tools:text="2.5万字" />
 
     <!--<TextView-->
     <!--android:id="@+id/book_detail_tv_lately_update"-->
