--- a/app/src/main/res/layout/item_book_shelf.xml
+++ b/app/src/main/res/layout/item_book_shelf.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_normal"
+    android:layout_marginLeft="@dimen/margin_normal"
+    android:layout_marginRight="@dimen/margin_normal"
     android:orientation="vertical">
 
     <LinearLayout
@@ -15,7 +16,8 @@
             android:id="@+id/item_shelf_iv_cover"
             android:layout_width="75dp"
             android:layout_height="100dp"
-            android:padding="@dimen/padding_normal" />
+            android:padding="@dimen/padding_small"
+            android:src="@mipmap/ic_default_book_cover"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,7 +31,8 @@
                 android:layout_height="wrap_content"
                 android:text="神墓"
                 android:textColor="@color/textPrimary"
-                android:textSize="@dimen/text_normal" />
+                android:textSize="@dimen/text_normal"
+                android:padding="@dimen/padding_small"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -96,7 +99,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_small">
                 <ProgressBar
                     android:id="@+id/item_shelf_pl"
                     android:layout_width="match_parent"
