--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/read_drawer"
     android:layout_width="match_parent"
@@ -24,8 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="?attr/actionBarSize"
-                android:theme="@style/Theme.ToolBar.Menu">
-            </androidx.appcompat.widget.Toolbar>
+                android:theme="@style/Theme.ToolBar.Menu"></androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
         <!--阅读页面-->
@@ -139,10 +139,34 @@
 
 
     <!--注意需要使用layout_gravity="start"属性-->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/read_rv_catalog"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="start" />
+        android:layout_gravity="start">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/read_rv_catalog"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <com.futuremind.recyclerviewfastscroll.FastScroller
+            android:id="@+id/read_fast_scroller"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:orientation="vertical"
+            app:fastscroll__handleColor="@color/colorPrimary"/>
+
+    </RelativeLayout>
+    <!--<androidx.recyclerview.widget.RecyclerView-->
+    <!--android:id="@+id/read_rv_catalog"-->
+    <!--android:layout_width="240dp"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_gravity="start"-->
+    <!--android:fastScrollEnabled="true"-->
+    <!--app:fastScrollHorizontalThumbDrawable="@drawable/recycler_thumb_drawable"-->
+    <!--app:fastScrollHorizontalTrackDrawable="@drawable/recycler_line_drawable"-->
+    <!--app:fastScrollVerticalThumbDrawable="@drawable/recycler_thumb_drawable"-->
+    <!--app:fastScrollVerticalTrackDrawable="@drawable/recycler_line_drawable" />-->
 
 </androidx.drawerlayout.widget.DrawerLayout>
