--- a/app/src/main/res/layout/item_book_detail_info.xml
+++ b/app/src/main/res/layout/item_book_detail_info.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/item_book_detail_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorBackground"
@@ -12,13 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:padding="12dp"
-        android:text="二十一世纪中国特种部队的精锐战士项少羽成了实验的小白鼠..."
+        android:text="二十一世纪中国特种部队"
         android:textColor="@color/textPrimary"
         android:textSize="15sp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/divider_wide" />
 
 </LinearLayout>
