--- a/app/src/main/res/layout/item_book_search.xml
+++ b/app/src/main/res/layout/item_book_search.xml
@@ -14,7 +14,8 @@
             android:id="@+id/item_search_iv_cover"
             android:layout_width="75dp"
             android:layout_height="100dp"
-            android:padding="@dimen/padding_normal" />
+            android:padding="@dimen/padding_normal"
+            android:src="@mipmap/ic_default_book_cover"/>
 
         <LinearLayout
             android:layout_width="match_parent"
