--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -1,162 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/read_drawer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:openDrawer="start">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/read_abl_top_menu"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="@color/read_menu_bg"
+        android:visibility="gone"
+        tools:visibility="visible">
 
-
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/read_abl_top_menu"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/read_menu_bg"
-            android:visibility="gone"
-            tools:visibility="visible">
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/Theme.ToolBar.Menu" />
+    </com.google.android.material.appbar.AppBarLayout>
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="?attr/actionBarSize"
-                android:theme="@style/Theme.ToolBar.Menu"></androidx.appcompat.widget.Toolbar>
-        </com.google.android.material.appbar.AppBarLayout>
-
-        <!--阅读页面-->
-        <com.thmub.newbook.widget.page.PageView
-            android:id="@+id/read_pv_content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            tools:visibility="gone" />
-
-        <!--切换页面提示-->
-        <TextView
-            android:id="@+id/read_tv_page_tip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/read_ll_bottom_menu"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
-            android:background="@color/read_menu_bg"
-            android:gravity="center"
-            android:paddingLeft="12dp"
-            android:paddingTop="8dp"
-            android:paddingRight="12dp"
-            android:paddingBottom="8dp"
-            android:text="1/12"
-            android:textColor="@color/md_white_1000"
-            android:visibility="gone" />
-
-        <!--底部页面-->
-        <LinearLayout
-            android:id="@+id/read_ll_bottom_menu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@color/read_menu_bg"
-            android:clickable="true"
-            android:orientation="vertical"
-            android:visibility="gone"
-            tools:visibility="visible">
-
-            <!--页面进度栏-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/read_tv_pre_chapter"
-                    style="@style/AppTheme.TextAppearance.Read.BottomMenu"
-                    android:layout_width="80dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="上一章" />
-
-                <SeekBar
-                    android:id="@+id/read_sb_chapter_progress"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:max="100"
-                    android:maxHeight="3dp"
-                    android:minHeight="3dp"
-                    android:progressDrawable="@drawable/seekbar_bg"
-                    android:thumb="@drawable/seekbar_thumb"
-                    android:thumbOffset="10dp" />
-
-                <TextView
-                    android:id="@+id/read_tv_next_chapter"
-                    style="@style/AppTheme.TextAppearance.Read.BottomMenu"
-                    android:layout_width="80dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="下一章" />
-            </LinearLayout>
-
-            <!--菜单栏-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="72dp"
-                android:orientation="horizontal"
-                android:paddingTop="12dp"
-                android:paddingBottom="12dp">
-
-                <TextView
-                    android:id="@+id/read_tv_category"
-                    style="@style/AppTheme.TextAppearance.Read.BottomMenu.Button"
-                    android:drawableTop="@mipmap/ic_read_menu_category"
-                    android:text="目录" />
-
-                <TextView
-                    android:id="@+id/read_tv_night_mode"
-                    style="@style/AppTheme.TextAppearance.Read.BottomMenu.Button"
-                    android:drawableTop="@mipmap/ic_read_menu_night"
-                    android:text="夜间" />
-
-                <TextView
-                    android:id="@+id/read_tv_download"
-                    style="@style/AppTheme.TextAppearance.Read.BottomMenu.Button"
-                    android:drawableTop="@mipmap/ic_read_menu_download"
-                    android:text="下载" />
-
-                <TextView
-                    android:id="@+id/read_tv_setting"
-                    style="@style/AppTheme.TextAppearance.Read.BottomMenu.Button"
-                    android:drawableTop="@mipmap/ic_read_menu_font"
-                    android:text="设置" />
-            </LinearLayout>
-        </LinearLayout>
-    </RelativeLayout>
-
-
-    <!--注意需要使用layout_gravity="start"属性-->
-    <RelativeLayout
+    <!--阅读页面-->
+    <com.thmub.newbook.widget.page.PageView
+        android:id="@+id/read_pv_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="start">
+        android:clickable="true"
+        tools:visibility="gone" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/read_rv_catalog"
+    <!--切换页面提示-->
+    <TextView
+        android:id="@+id/read_tv_page_tip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/read_ll_bottom_menu"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:background="@color/read_menu_bg"
+        android:gravity="center"
+        android:paddingLeft="12dp"
+        android:paddingTop="8dp"
+        android:paddingRight="12dp"
+        android:paddingBottom="8dp"
+        android:text="1/12"
+        android:textColor="@color/md_white_1000"
+        android:visibility="gone" />
+
+    <!--底部页面-->
+    <LinearLayout
+        android:id="@+id/read_ll_bottom_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/read_menu_bg"
+        android:clickable="true"
+        android:orientation="vertical"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <!--页面进度栏-->
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="60dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-        <com.futuremind.recyclerviewfastscroll.FastScroller
-            android:id="@+id/read_fast_scroller"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:orientation="vertical"
-            app:fastscroll__handleColor="@color/colorPrimary"/>
+            <TextView
+                android:id="@+id/read_tv_pre_chapter"
+                style="@style/AppTheme.TextAppearance.Read.BottomMenu"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="上一章" />
 
-    </RelativeLayout>
+            <SeekBar
+                android:id="@+id/read_sb_chapter_progress"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:max="100"
+                android:maxHeight="3dp"
+                android:minHeight="3dp"
+                android:progressDrawable="@drawable/seekbar_bg"
+                android:thumb="@drawable/seekbar_thumb"
+                android:thumbOffset="10dp" />
 
-</androidx.drawerlayout.widget.DrawerLayout>
+            <TextView
+                android:id="@+id/read_tv_next_chapter"
+                style="@style/AppTheme.TextAppearance.Read.BottomMenu"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="下一章" />
+        </LinearLayout>
+
+        <!--菜单栏-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:orientation="horizontal"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp">
+
+            <TextView
+                android:id="@+id/read_tv_category"
+                style="@style/AppTheme.TextAppearance.Read.BottomMenu.Button"
+                android:drawableTop="@mipmap/ic_read_menu_category"
+                android:text="目录" />
+
+            <TextView
+                android:id="@+id/read_tv_night_mode"
+                style="@style/AppTheme.TextAppearance.Read.BottomMenu.Button"
+                android:drawableTop="@mipmap/ic_read_menu_night"
+                android:text="夜间" />
+
+            <TextView
+                android:id="@+id/read_tv_download"
+                style="@style/AppTheme.TextAppearance.Read.BottomMenu.Button"
+                android:drawableTop="@mipmap/ic_read_menu_download"
+                android:text="下载" />
+
+            <TextView
+                android:id="@+id/read_tv_setting"
+                style="@style/AppTheme.TextAppearance.Read.BottomMenu.Button"
+                android:drawableTop="@mipmap/ic_read_menu_font"
+                android:text="设置" />
+        </LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
