--- a/app/src/main/res/menu/menu_book_search.xml
+++ b/app/src/main/res/menu/menu_book_search.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_source"
-        android:title="书源管理"/>
+        android:title="书源管理" />
+
+    <item
+        android:id="@+id/action_setting"
+        android:title="搜索设置" />
 
 </menu>
