--- a/app/src/main/res/layout/app_drawer_header.xml
+++ b/app/src/main/res/layout/app_drawer_header.xml
@@ -13,7 +13,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
+    <com.thmub.newbook.widget.CircleImageView
         android:id="@+id/drawer_iv"
         android:layout_width="60dp"
         android:layout_height="60dp"
