--- a/app/src/main/res/layout/item_book_list.xml
+++ b/app/src/main/res/layout/item_book_list.xml
@@ -2,26 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_normal"
+    android:layout_marginLeft="@dimen/margin_normal"
+    android:layout_marginRight="@dimen/margin_normal"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/item_iv_cover"
             android:layout_width="75dp"
             android:layout_height="100dp"
-            android:padding="@dimen/padding_normal"
+            android:padding="@dimen/padding_small"
             android:src="@mipmap/ic_default_book_cover"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/padding_normal">
+            android:padding="@dimen/padding_small">
 
             <TextView
                 android:id="@+id/item_tv_title"
@@ -29,36 +31,75 @@
                 android:layout_height="wrap_content"
                 android:text="神墓"
                 android:textColor="@color/textPrimary"
-                android:textSize="@dimen/text_large" />
+                android:textSize="@dimen/text_normal"
+                android:padding="@dimen/padding_small"/>
 
-            <TextView
-                android:id="@+id/item_tv_author"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="辰东"
-                android:textColor="@color/textAssist"
-                android:textSize="@dimen/text_normal" />
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/item_tv_info"
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/padding_small"
+                    android:src="@mipmap/ic_book_author" />
+
+                <TextView
+                    android:id="@+id/item_tv_author"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="辰东"
+                    android:textColor="@color/textAssist"
+                    android:textSize="@dimen/text_small" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="简介"
-                android:textColor="@color/textAssist"
-                android:textSize="@dimen/text_small" />
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/item_tv_source"
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/padding_small"
+                    android:src="@mipmap/ic_book_process" />
+
+                <TextView
+                    android:id="@+id/item_tv_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:text="简介：xxxxxxx"
+                    android:textColor="@color/textAssist"
+                    android:textSize="@dimen/text_small" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="[棉花糖小说]"
-                android:textColor="@color/textAssist"
-                android:textSize="@dimen/text_small" />
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/padding_small"
+                    android:src="@mipmap/ic_book_last" />
+
+                <TextView
+                    android:id="@+id/item_tv_source"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:text="共（1）源 xxxxxxxx"
+                    android:textColor="@color/textAssist"
+                    android:textSize="@dimen/text_small" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
