--- a/app/src/main/res/layout/item_book_source.xml
+++ b/app/src/main/res/layout/item_book_source.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="60dp"
     android:layout_marginTop="@dimen/margin_normal"
     android:layout_marginLeft="@dimen/margin_normal"
     android:layout_marginRight="@dimen/margin_normal"
@@ -18,16 +18,17 @@
             android:layout_width="0dp"
             android:layout_weight="9"
             android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/margin_normal"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <CheckBox
-                android:id="@+id/item_source_cb"
+                android:id="@+id/item_cb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
             <TextView
-                android:id="@+id/item_source_tv_title"
+                android:id="@+id/item_tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_marginLeft="@dimen/margin_normal"
@@ -38,9 +39,23 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/item_source_iv_roof"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:id="@+id/item_iv_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_normal"
+            android:src="@mipmap/ic_source_edit" />
+
+        <ImageView
+            android:id="@+id/item_iv_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_normal"
+            android:src="@mipmap/ic_source_delete" />
+
+        <ImageView
+            android:id="@+id/item_iv_sort"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_normal"
             android:src="@mipmap/ic_source_sort" />
 
