--- a/app/src/main/res/layout/item_book_rank.xml
+++ b/app/src/main/res/layout/item_book_rank.xml
@@ -1,47 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:background="@color/colorBackground"
-    android:orientation="horizontal"
-    android:layout_margin="@dimen/margin_normal"
-    app:cardCornerRadius="8dp">
+    android:padding="@dimen/padding_normal"
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/item_iv_cover"
-            android:layout_width="45dp"
-            android:layout_height="60dp" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="8dp">
-
-            <TextView
-                android:id="@+id/item_tv_type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="玄幻"
-                android:textColor="@color/textPrimary"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/item_tv_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:textColor="@color/textAssist"
-                android:textSize="13sp"
-                tools:text="1000本" />
-        </LinearLayout>
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/item_tv_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_weight="9"
+        android:padding="12dp"
+        android:text="二十一世纪中国特种部队"
+        android:textColor="@color/textPrimary"
+        android:textSize="15sp" />
+</LinearLayout>
