--- a/app/src/main/res/layout/item_catalog.xml
+++ b/app/src/main/res/layout/item_catalog.xml
@@ -13,6 +13,7 @@
         android:drawablePadding="10dp"
         android:padding="12dp"
         android:text="第一章 八十大寿"
+        android:textColor="@color/textPrimary"
         android:textSize="15sp" />
 
 </LinearLayout>
